Used java 8, prepared infrastructure